--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -137,7 +137,25 @@
                 sprzętu z Serwisu.
             </p>
 
-
+            <!--             NAPRAWY GWARANCYJNE -->
+            <p class="p-politics-title"><strong>§ NAPRAWY GWARANCYJNE:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 24. Serwis wykonuje naprawy gwarancyjne
+                zgodnie z warunkami gwarancji serwisowanego sprzętu.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 25. Czas naprawy gwarancyjnej w
+                przypadku braków formalnych ze strony Zleceniodawcy (np. braku karty gwarancyjnej, kopii dokumentu
+                zakupu) biegnie od momentu usunięcia tych braków przez Zleceniodawcę. Serwis może odmówić naprawy w
+                przypadku braków formalnych.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 26. Naprawy gwarancyjne są wykonywane
+                przez Serwis nieodpłatnie z wyłączeniem przypadków określonych w warunkach gwarancji lub w Regulaminie.
+                Serwis zastrzega sobie prawo do nieuznania nieodpłatnej naprawy w ramach gwarancji jeżeli nastąpiła
+                ingerencja w sprzęt, zostały zerwane plomby gwarancyjne, sprzęt został uszkodzony mechanicznie lub
+                uszkodzenie jest następstwem eksploatacji w sposób niezgodny z przeznaczeniem sprzętu.
+            </p>
         </div>
     </div>
 </div>
