--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -138,7 +138,7 @@
             </p>
 
             <!--             NAPRAWY GWARANCYJNE -->
-            <p class="p-politics-title"><strong>§ NAPRAWY GWARANCYJNE:</strong></p>
+            <p class="p-politics-title"><strong>§2 NAPRAWY GWARANCYJNE:</strong></p>
             <p class="p-politics">
                 <img src="static/images/service/check.png" style="height: 20px"> 24. Serwis wykonuje naprawy gwarancyjne
                 zgodnie z warunkami gwarancji serwisowanego sprzętu.
@@ -156,6 +156,69 @@
                 ingerencja w sprzęt, zostały zerwane plomby gwarancyjne, sprzęt został uszkodzony mechanicznie lub
                 uszkodzenie jest następstwem eksploatacji w sposób niezgodny z przeznaczeniem sprzętu.
             </p>
+
+            <!--             NAPRAWY POGWARANCYJNE -->
+            <p class="p-politics-title"><strong>§3 NAPRAWY POGWARANCYJNE:</strong></p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 27. W przypadku niepoinformowania
+                Serwisu o trwającej gwarancji producenta sprzętu, Serwis nie ponosi odpowiedzialności za utratę tej
+                gwarancji.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 28. Serwis ma prawo odmówić przyjęcia
+                sprzętu do naprawy pogwarancyjnej bez podania przyczyny.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 29. Serwis zastrzega sobie możliwość
+                odstąpienia od wykonania naprawy w przypadku braku części zamiennych.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 30. Wymienione podczas naprawy części
+                nie podlegają zwrotowi Zleceniodawcy.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 31. Serwis zastrzega sobie możliwość
+                zwrotu Zleceniodawcy nie naprawionego sprzętu o nieco odmiennych objawach aniżeli został przyjęty.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 32. W przypadku rezygnacji z naprawy i
+                gdy Serwis zakupił już wymagane do naprawy części, Zleceniodawca zostanie obciążony poniesionymi przez
+                Serwis kosztami.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 33. Koszt diagnozy, gdy Zleceniodawca
+                nie zdecyduje się na naprawę pozostawionego sprzętu w Serwisie, wynosi 50 zł brutto. Opłata jest
+                pobierana w przypadku rezygnacji z naprawy lub nie stwierdzenia usterki opisanej w Protokole.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 34. Sprzęt zostanie zdiagnozowany
+                jedynie pod kątem usterki zgłoszonej przez Zleceniodawcę w Protokole. Minimalny czas oczekiwania na
+                diagnozę i wycenę kosztu naprawy (kosztorys) wynosi 3 dni robocze.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 35. Czas wykonania naprawy uzależniony
+                jest od dostępności części zamiennych i w szczególnych przypadkach może przekroczyć ustawowy termin.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 36. Zleceniodawca upoważnia Serwis do
+                przeprowadzenia na sprzęcie wszystkich niezbędnych czynności mających na celu wykonania diagnozy i
+                naprawy, a w szczególności wymiany podzespołów, lutowania, wygrzewania, demontażu, otwierania,
+                czyszczenia i przetwarzania danych.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 37. Jeśli koszt naprawy nie przekroczy
+                150 zł brutto, naprawa zostanie wykonana bez konsultacji kosztów ze Zleceniodawcą. W innym przypadku
+                naprawa będzie kontynuowana po uprzedniej konsultacji oraz uzyskaniu zgody od Zleceniodawcy.
+            </p>
+            <p class="p-politics">
+                <img src="static/images/service/check.png" style="height: 20px"> 38. W przypadku gdy po przedstawieniu
+                kosztorysu, w trakcie wykonywania usługi, okaże się że dalsza naprawa wymaga dodatkowych czynności lub
+                części nie uwzględnionych w kosztorysie, Serwis niezwłocznie poinformuje o tym Zleceniodawcę. W takim
+                przypadku Zleceniodawcy przysługuje prawo do rezygnacji z naprawy przy jednoczesnym pokryciu
+                dotychczasowych kosztów Serwisu.
+            </p>
+
+
         </div>
     </div>
 </div>
