--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -218,8 +218,10 @@
                 dotychczasowych kosztów Serwisu.
             </p>
 
-
         </div>
+    </div>
+    <div class="row">
+        <a href="/static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf">regulamin</a>
     </div>
 </div>
 
