add files to download

--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -221,7 +221,7 @@
         </div>
     </div>
     <div class="row">
-        <a href="/static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf">regulamin</a>
+              <a class=h5-titles-shadow" href="/do-pobrania">PLIKI DO POBRANIA</a>
     </div>
 </div>
 
