--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -131,7 +131,7 @@
                         <a class="dropdown-item" href="/polityka_prywatnosci">POLITYKA PRYWATNOŚCI</a>
                         <a class="dropdown-item" href="/cookies">INFORMACJE O COOKIES</a>
                         <a class="dropdown-item" href="/regulamin">REGULAMIN SERWISU</a>
-                        <a class="dropdown-item" href="/regulamin">PLIKI DO POBRANIA</a>
+                        <a class="dropdown-item" href="/do-pobrania">PLIKI DO POBRANIA</a>
                         <a class="dropdown-item" href="/kontakt">KONTAKT</a>
                     </div>
                 </li>
