--- a/templates/do-pobrania.html
+++ b/templates/do-pobrania.html
@@ -6,7 +6,8 @@
 
 <div class="container-fluid text-center">
     <div class="row">
-       <a href="static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf">REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU</a>
+        <a class="p-politics" href="static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf">REGULAMIN PRZYJĘCIA SPRZĘTU
+            DO SERWISU</a>
     </div>
 </div>
 
