--- a/templates/regulamin.html
+++ b/templates/regulamin.html
@@ -221,7 +221,7 @@
         </div>
     </div>
     <div class="row">
-              <a class=h5-titles-shadow" href="do-pobrania">PLIKI DO POBRANIA</a>
+              <a class="h5-titles-shadow" href="do-pobrania">PLIKI DO POBRANIA</a>
     </div>
 </div>
 
