--- a/templates/do-pobrania.html
+++ b/templates/do-pobrania.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid text-center">
     <div class="row">
-        <a class="p-politics" href="static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf">REGULAMIN PRZYJĘCIA SPRZĘTU
+        <a class="h4-titles" href="static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf">REGULAMIN PRZYJĘCIA SPRZĘTU
             DO SERWISU</a>
     </div>
 </div>
