add new file to download

--- a/templates/do-pobrania.html
+++ b/templates/do-pobrania.html
@@ -6,8 +6,11 @@
 
 <div class="container-fluid text-center">
     <div class="row">
-        <a class="h3-titles" href="static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf" style="color: black">REGULAMIN PRZYJĘCIA SPRZĘTU
+        <a class="h3-titles" href="static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf" style="color: black">REGULAMIN
+            PRZYJĘCIA SPRZĘTU
             DO SERWISU</a>
+        <a class="h3-titles" href="static/pdf/PROTOKÓŁ PRZYJĘCIA SPRZĘTU DO SERWISU.pdf" style="color: black">PEOTOKÓŁ
+            PRZYJĘCIA SPRZĘTU DO SERWISU</a>
     </div>
 </div>
 
