--- a/templates/do-pobrania.html
+++ b/templates/do-pobrania.html
@@ -7,13 +7,15 @@
 <div class="container-fluid text-center">
     <div class="row">
         <a class="h3-titles" href="static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf" style="color: black">REGULAMIN
-            PRZYJĘCIA SPRZĘTU
-            DO SERWISU</a>
-        <a class="h3-titles" href="static/pdf/PROTOKÓŁ PRZYJĘCIA SPRZĘTU DO SERWISU.pdf" style="color: black">PEOTOKÓŁ
             PRZYJĘCIA SPRZĘTU DO SERWISU</a>
+        <a class="h3-titles" href="static/pdf/PROTOKÓŁ PRZYJĘCIA SPRZĘTU DO SERWISU.pdf" style="color: black">PROTOKÓŁ
+            PRZYJĘCIA SPRZĘTU DO SERWISU</a>
+        <a class="h3-titles" href="static/pdf/UMOWA KUPNA.pdf" style="color: black">UMOWA SKUPU SPRZĘTU
+            ELEKTRONICZNEGO</a>
+        <a class="h3-titles" href="static/pdf/UMOWA SPRZEDAŻY.pdf" style="color: black">UMOWA SPRZEDAŻY SPRZĘTU
+            ELEKTRONICZNEGO</a>
     </div>
 </div>
-
 
 <!-- FOOTER -->
 <footer>
