hide individual offer in navbar

--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -63,9 +63,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/o_nas">O NAS</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">DLA CIEBIE</a>
-                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="#">DLA CIEBIE</a>-->
+<!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="/dla_firm">DLA FIRM</a>
                 </li>
