--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="icon" href="/static/images/info/diphone_logo_white.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/static/images/info/diphone_logo.png" type="image/png">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
