--- a/templates/pl_layout.html
+++ b/templates/pl_layout.html
@@ -64,11 +64,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
+                    <a class="nav-link" href="/aktualnosci">AKTUALNOŚCI</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/o_nas">O NAS</a>
                 </li>
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">DLA CIEBIE</a>-->
-<!--                </li>-->
+                <!--                <li class="nav-item">-->
+                <!--                    <a class="nav-link" href="#">DLA CIEBIE</a>-->
+                <!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="/dla_firm">DLA FIRM</a>
                 </li>
