--- a/templates/do-pobrania.html
+++ b/templates/do-pobrania.html
@@ -14,6 +14,8 @@
             ELEKTRONICZNEGO</a>
         <a class="h3-titles" href="static/pdf/UMOWA SPRZEDAŻY.pdf" style="color: black">UMOWA SPRZEDAŻY SPRZĘTU
             ELEKTRONICZNEGO</a>
+        <a class="h3-titles" href="static/pdf/DOWÓD SPRZEDAŻY.pdf" style="color: black">DOWÓD SPRZEDAŻY SPRZĘTU
+            ELEKTRONICZNEGO</a>
     </div>
 </div>
 
