--- a/templates/do-pobrania.html
+++ b/templates/do-pobrania.html
@@ -6,15 +6,15 @@
 
 <div class="container-fluid text-center">
     <div class="row">
-        <a class="h3-titles" href="static/pdf/REGULAMIN PRZYJĘCIA SPRZĘTU DO SERWISU.pdf" style="color: black">REGULAMIN
+        <a class="h3-titles" style="color: black">REGULAMIN
             PRZYJĘCIA SPRZĘTU DO SERWISU</a>
-        <a class="h3-titles" href="static/pdf/PROTOKÓŁ PRZYJĘCIA SPRZĘTU DO SERWISU.pdf" style="color: black">PROTOKÓŁ
+        <a class="h3-titles" style="color: black">PROTOKÓŁ
             PRZYJĘCIA SPRZĘTU DO SERWISU</a>
-        <a class="h3-titles" href="static/pdf/UMOWA KUPNA.pdf" style="color: black">UMOWA SKUPU SPRZĘTU
+        <a class="h3-titles" style="color: black">UMOWA SKUPU SPRZĘTU
             ELEKTRONICZNEGO</a>
-        <a class="h3-titles" href="static/pdf/UMOWA SPRZEDAŻY.pdf" style="color: black">UMOWA SPRZEDAŻY SPRZĘTU
+        <a class="h3-titles" style="color: black">UMOWA SPRZEDAŻY SPRZĘTU
             ELEKTRONICZNEGO</a>
-        <a class="h3-titles" href="static/pdf/DOWÓD SPRZEDAŻY.pdf" style="color: black">DOWÓD SPRZEDAŻY SPRZĘTU
+        <a class="h3-titles" style="color: black">DOWÓD SPRZEDAŻY SPRZĘTU
             ELEKTRONICZNEGO</a>
     </div>
 </div>
